fix:CommandLineRunner версия 0.0.1